--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 	line-height: 1.6;
     color: #333;
     background-color: #fffff0;
+	margin: 20px;
 }
 
 header {
@@ -50,6 +51,11 @@ h2 {
     padding: 40px 20px;
     background-color: fffff0;
 /*    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);*/
+
+.article {
+	
+	
+}
 
  a {
     color: #3498db;
