--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 	line-height: 1.6;
     color: #333;
     background-color: #fffff0;
-	margin: 20px;
+	margin-left: 20px;
 }
 
 header {
@@ -18,7 +18,7 @@ header {
     margin-bottom: 40px;
     padding-bottom: 20px;
     border-bottom: 2px solid #e0e0e0;
-	margin: 20px;
+	margin-left: 20px;
 }
 
 h1 {
@@ -54,7 +54,7 @@ h2 {
 /*    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);*/
 
 .article {
-	
+
 	
 }
 
