--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,10 @@ h2 {
 /*    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);*/
 
 .article {
-
+	margin-bottom: 40px;
+    padding-bottom: 20px;
+    border-bottom: 2px solid #e0e0e0;
+	margin-left: 20px;
 	
 }
 
